Enhance Vault plugin with new entities, configuration, and capture functionality